# further-steps-with-qdrant

./: README.md  pyproject.toml
tasks/: task_3.md
tasks/task_1/: main.py  task_1_solution.md
tasks/task_2/: main.py  task_2.md  task_2_solution.md
tasks/task_3/: main.py  task_3_solution.md
